# ezaudio

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
include/ezaudio/: ez_audio.h  ezaudio.h
scripts/: make_header_only.py
src/: common.cpp  coreaudio.cpp  wsapi.cpp
test/: test_ezaudio.cpp
